--- a/terminal-view/build.gradle
+++ b/terminal-view/build.gradle
@@ -15,6 +15,11 @@ android {
         testInstrumentationRunner "android.support.test.runner.AndroidJUnitRunner"
     }
 
+    lintOptions {
+        abortOnError false
+//        checkReleaseBuilds false
+    }
+
     buildTypes {
         release {
             minifyEnabled false
