--- a/termux-shared/build.gradle
+++ b/termux-shared/build.gradle
@@ -49,6 +49,15 @@ android {
         }
     }
 
+    lintOptions {
+        // Do not abort on errors, since this library is used by Termux app
+        // and we do not want to block releases due to lint errors.
+        abortOnError false
+        // Disable lint checks for release builds.
+        // This is needed since some of the checks are not applicable to libraries.
+        checkReleaseBuilds false
+    }
+
     compileOptions {
         // Flag to enable support for the new language APIs
         coreLibraryDesugaringEnabled true
