--- a/.github/workflows/attach_debug_apks_to_release.yml
+++ b/.github/workflows/attach_debug_apks_to_release.yml
@@ -32,6 +32,7 @@ jobs:
         with:
           tag_name: ${{steps.previous_tag.outputs.tag}}
           prerelease: True
+          target_commitish: ${{ github.sha }}
 
       - name: Build and attach APKs to release
         shell: bash {0}
